Bug 1460295 - Don't dispatch mutation event for style attribute change from CSSOM. r=bz

MozReview-Commit-ID: JWDpyg7czXI